# simplesm

./: .gitignore  README.md  __init__.py  setup.cfg  setup.py  simplesm.py  test.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
simplesm/: __init__.py  example.py  simplesm.py  test.py
