[metadata]
name = simplesm
version = 0.1.4
description = Simple state machine for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aasmpro/simplesm
author = Abolfazl Amiri
author_email = aa.smpro@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
python_requires = >=3.5

[options.packages.find]
exclude=tests